Lab2/debug/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> ;
Rule 5     statement -> { statements }
Rule 6     statement -> FOR ID = range_expr statement
Rule 7     statement -> WHILE ( condition ) statement
Rule 8     statement -> IF ( condition ) statement ELSE statement  [precedence=nonassoc, level=2]
Rule 9     statement -> IF ( condition ) statement  [precedence=nonassoc, level=1]
Rule 10    statement -> PRINT elements ;
Rule 11    statement -> RETURN expr ;
Rule 12    statement -> CONTINUE ;
Rule 13    statement -> BREAK ;
Rule 14    statement -> assignment ;
Rule 15    lvalue -> _index
Rule 16    lvalue -> ID
Rule 17    assignment -> lvalue DIVASSIGN expr
Rule 18    assignment -> lvalue MULASSIGN expr
Rule 19    assignment -> lvalue SUBASSIGN expr
Rule 20    assignment -> lvalue ADDASSIGN expr
Rule 21    assignment -> lvalue = expr
Rule 22    condition -> expr GE expr  [precedence=nonassoc, level=4]
Rule 23    condition -> expr GT expr  [precedence=nonassoc, level=4]
Rule 24    condition -> expr LE expr  [precedence=nonassoc, level=4]
Rule 25    condition -> expr LT expr  [precedence=nonassoc, level=4]
Rule 26    condition -> expr NE expr  [precedence=nonassoc, level=4]
Rule 27    condition -> expr EQ expr  [precedence=nonassoc, level=4]
Rule 28    expr -> STRING
Rule 29    expr -> FLOATNUM
Rule 30    expr -> INTNUM
Rule 31    expr -> ( expr )
Rule 32    expr -> [ rows ]
Rule 33    expr -> ZEROS ( idx_list )
Rule 34    expr -> EYE ( idx_list )
Rule 35    expr -> ONES ( idx_list )
Rule 36    expr -> expr '  [precedence=right, level=8]
Rule 37    expr -> _index
Rule 38    expr -> ID  [precedence=left, level=9]
Rule 39    expr -> MINUS expr  [precedence=right, level=7]
Rule 40    expr -> expr DOTDIV expr  [precedence=left, level=6]
Rule 41    expr -> expr DOTMUL expr  [precedence=left, level=6]
Rule 42    expr -> expr DIVIDE expr  [precedence=left, level=6]
Rule 43    expr -> expr TIMES expr  [precedence=left, level=6]
Rule 44    expr -> expr DOTSUB expr  [precedence=left, level=5]
Rule 45    expr -> expr DOTADD expr  [precedence=left, level=5]
Rule 46    expr -> expr MINUS expr  [precedence=left, level=5]
Rule 47    expr -> expr PLUS expr  [precedence=left, level=5]
Rule 48    _index -> ID [ idx_list ]
Rule 49    idx_list -> idx_list , INTNUM
Rule 50    idx_list -> INTNUM
Rule 51    rows -> rows ; elements
Rule 52    rows -> elements
Rule 53    elements -> elements , expr
Rule 54    elements -> expr
Rule 55    range_expr -> expr : expr  [precedence=nonassoc, level=3]
Rule 56    range_expr -> expr : expr : expr  [precedence=nonassoc, level=3]

Terminals, with rules where they appear:

'                    : 36
(                    : 7 8 9 31 33 34 35
)                    : 7 8 9 31 33 34 35
,                    : 49 53
:                    : 55 56 56
;                    : 4 10 11 12 13 14 51
=                    : 6 21
ADDASSIGN            : 20
BREAK                : 13
CONTINUE             : 12
DIVASSIGN            : 17
DIVIDE               : 42
DOTADD               : 45
DOTDIV               : 40
DOTMUL               : 41
DOTSUB               : 44
ELSE                 : 8
EQ                   : 27
EYE                  : 34
FLOATNUM             : 29
FOR                  : 6
GE                   : 22
GT                   : 23
ID                   : 6 16 38 48
IF                   : 8 9
INTNUM               : 30 49 50
LE                   : 24
LT                   : 25
MINUS                : 39 46
MULASSIGN            : 18
NE                   : 26
ONES                 : 35
PLUS                 : 47
PRINT                : 10
RETURN               : 11
STRING               : 28
SUBASSIGN            : 19
TIMES                : 43
WHILE                : 7
ZEROS                : 33
[                    : 32 48
]                    : 32 48
error                : 
{                    : 5
}                    : 5

Nonterminals, with rules where they appear:

_index               : 15 37
assignment           : 14
condition            : 7 8 9
elements             : 10 51 52 53
expr                 : 11 17 18 19 20 21 22 22 23 23 24 24 25 25 26 26 27 27 31 36 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 53 54 55 55 56 56 56
idx_list             : 33 34 35 48 49
lvalue               : 17 18 19 20 21
program              : 0
range_expr           : 6
rows                 : 32 51
statement            : 2 3 6 7 8 8 9
statements           : 1 3 5


state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . ;
    (5) statement -> . { statements }
    (6) statement -> . FOR ID = range_expr statement
    (7) statement -> . WHILE ( condition ) statement
    (8) statement -> . IF ( condition ) statement ELSE statement
    (9) statement -> . IF ( condition ) statement
    (10) statement -> . PRINT elements ;
    (11) statement -> . RETURN expr ;
    (12) statement -> . CONTINUE ;
    (13) statement -> . BREAK ;
    (14) statement -> . assignment ;
    (17) assignment -> . lvalue DIVASSIGN expr
    (18) assignment -> . lvalue MULASSIGN expr
    (19) assignment -> . lvalue SUBASSIGN expr
    (20) assignment -> . lvalue ADDASSIGN expr
    (21) assignment -> . lvalue = expr
    (15) lvalue -> . _index
    (16) lvalue -> . ID
    (48) _index -> . ID [ idx_list ]
    ;               shift and go to state 4
    {               shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 7

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 14
    lvalue                         shift and go to state 15
    _index                         shift and go to state 16

state 1

    (0) S' -> program .


state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . ;
    (5) statement -> . { statements }
    (6) statement -> . FOR ID = range_expr statement
    (7) statement -> . WHILE ( condition ) statement
    (8) statement -> . IF ( condition ) statement ELSE statement
    (9) statement -> . IF ( condition ) statement
    (10) statement -> . PRINT elements ;
    (11) statement -> . RETURN expr ;
    (12) statement -> . CONTINUE ;
    (13) statement -> . BREAK ;
    (14) statement -> . assignment ;
    (17) assignment -> . lvalue DIVASSIGN expr
    (18) assignment -> . lvalue MULASSIGN expr
    (19) assignment -> . lvalue SUBASSIGN expr
    (20) assignment -> . lvalue ADDASSIGN expr
    (21) assignment -> . lvalue = expr
    (15) lvalue -> . _index
    (16) lvalue -> . ID
    (48) _index -> . ID [ idx_list ]
    $end            reduce using rule 1 (program -> statements .)
    ;               shift and go to state 4
    {               shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 7

    statement                      shift and go to state 17
    assignment                     shift and go to state 14
    lvalue                         shift and go to state 15
    _index                         shift and go to state 16

state 3

    (2) statements -> statement .
    ;               reduce using rule 2 (statements -> statement .)
    {               reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)
    CONTINUE        reduce using rule 2 (statements -> statement .)
    BREAK           reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    }               reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> ; .
    ;               reduce using rule 4 (statement -> ; .)
    {               reduce using rule 4 (statement -> ; .)
    FOR             reduce using rule 4 (statement -> ; .)
    WHILE           reduce using rule 4 (statement -> ; .)
    IF              reduce using rule 4 (statement -> ; .)
    PRINT           reduce using rule 4 (statement -> ; .)
    RETURN          reduce using rule 4 (statement -> ; .)
    CONTINUE        reduce using rule 4 (statement -> ; .)
    BREAK           reduce using rule 4 (statement -> ; .)
    ID              reduce using rule 4 (statement -> ; .)
    $end            reduce using rule 4 (statement -> ; .)
    }               reduce using rule 4 (statement -> ; .)
    ELSE            reduce using rule 4 (statement -> ; .)


state 5

    (5) statement -> { . statements }
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . ;
    (5) statement -> . { statements }
    (6) statement -> . FOR ID = range_expr statement
    (7) statement -> . WHILE ( condition ) statement
    (8) statement -> . IF ( condition ) statement ELSE statement
    (9) statement -> . IF ( condition ) statement
    (10) statement -> . PRINT elements ;
    (11) statement -> . RETURN expr ;
    (12) statement -> . CONTINUE ;
    (13) statement -> . BREAK ;
    (14) statement -> . assignment ;
    (17) assignment -> . lvalue DIVASSIGN expr
    (18) assignment -> . lvalue MULASSIGN expr
    (19) assignment -> . lvalue SUBASSIGN expr
    (20) assignment -> . lvalue ADDASSIGN expr
    (21) assignment -> . lvalue = expr
    (15) lvalue -> . _index
    (16) lvalue -> . ID
    (48) _index -> . ID [ idx_list ]
    ;               shift and go to state 4
    {               shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 7

    statements                     shift and go to state 18
    statement                      shift and go to state 3
    assignment                     shift and go to state 14
    lvalue                         shift and go to state 15
    _index                         shift and go to state 16

state 6

    (6) statement -> FOR . ID = range_expr statement
    ID              shift and go to state 19


state 7

    (16) lvalue -> ID .
    (48) _index -> ID . [ idx_list ]
    DIVASSIGN       reduce using rule 16 (lvalue -> ID .)
    MULASSIGN       reduce using rule 16 (lvalue -> ID .)
    SUBASSIGN       reduce using rule 16 (lvalue -> ID .)
    ADDASSIGN       reduce using rule 16 (lvalue -> ID .)
    =               reduce using rule 16 (lvalue -> ID .)
    [               shift and go to state 20


state 8

    (7) statement -> WHILE . ( condition ) statement
    (               shift and go to state 21


state 9

    (8) statement -> IF . ( condition ) statement ELSE statement
    (9) statement -> IF . ( condition ) statement
    (               shift and go to state 22


state 10

    (10) statement -> PRINT . elements ;
    (53) elements -> . elements , expr
    (54) elements -> . expr
    (28) expr -> . STRING
    (29) expr -> . FLOATNUM
    (30) expr -> . INTNUM
    (31) expr -> . ( expr )
    (32) expr -> . [ rows ]
    (33) expr -> . ZEROS ( idx_list )
    (34) expr -> . EYE ( idx_list )
    (35) expr -> . ONES ( idx_list )
    (36) expr -> . expr '
    (37) expr -> . _index
    (38) expr -> . ID
    (39) expr -> . MINUS expr
    (40) expr -> . expr DOTDIV expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTADD expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) _index -> . ID [ idx_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    ZEROS           shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 34
    MINUS           shift and go to state 35

    elements                       shift and go to state 23
    expr                           shift and go to state 24
    _index                         shift and go to state 33

state 11

    (11) statement -> RETURN . expr ;
    (28) expr -> . STRING
    (29) expr -> . FLOATNUM
    (30) expr -> . INTNUM
    (31) expr -> . ( expr )
    (32) expr -> . [ rows ]
    (33) expr -> . ZEROS ( idx_list )
    (34) expr -> . EYE ( idx_list )
    (35) expr -> . ONES ( idx_list )
    (36) expr -> . expr '
    (37) expr -> . _index
    (38) expr -> . ID
    (39) expr -> . MINUS expr
    (40) expr -> . expr DOTDIV expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTADD expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) _index -> . ID [ idx_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    ZEROS           shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 34
    MINUS           shift and go to state 35

    expr                           shift and go to state 36
    _index                         shift and go to state 33

state 12

    (12) statement -> CONTINUE . ;
    ;               shift and go to state 37


state 13

    (13) statement -> BREAK . ;
    ;               shift and go to state 38


state 14

    (14) statement -> assignment . ;
    ;               shift and go to state 39


state 15

    (17) assignment -> lvalue . DIVASSIGN expr
    (18) assignment -> lvalue . MULASSIGN expr
    (19) assignment -> lvalue . SUBASSIGN expr
    (20) assignment -> lvalue . ADDASSIGN expr
    (21) assignment -> lvalue . = expr
    DIVASSIGN       shift and go to state 40
    MULASSIGN       shift and go to state 41
    SUBASSIGN       shift and go to state 42
    ADDASSIGN       shift and go to state 43
    =               shift and go to state 44


state 16

    (15) lvalue -> _index .
    DIVASSIGN       reduce using rule 15 (lvalue -> _index .)
    MULASSIGN       reduce using rule 15 (lvalue -> _index .)
    SUBASSIGN       reduce using rule 15 (lvalue -> _index .)
    ADDASSIGN       reduce using rule 15 (lvalue -> _index .)
    =               reduce using rule 15 (lvalue -> _index .)


state 17

    (3) statements -> statements statement .
    ;               reduce using rule 3 (statements -> statements statement .)
    {               reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    WHILE           reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    PRINT           reduce using rule 3 (statements -> statements statement .)
    RETURN          reduce using rule 3 (statements -> statements statement .)
    CONTINUE        reduce using rule 3 (statements -> statements statement .)
    BREAK           reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    }               reduce using rule 3 (statements -> statements statement .)


state 18

    (5) statement -> { statements . }
    (3) statements -> statements . statement
    (4) statement -> . ;
    (5) statement -> . { statements }
    (6) statement -> . FOR ID = range_expr statement
    (7) statement -> . WHILE ( condition ) statement
    (8) statement -> . IF ( condition ) statement ELSE statement
    (9) statement -> . IF ( condition ) statement
    (10) statement -> . PRINT elements ;
    (11) statement -> . RETURN expr ;
    (12) statement -> . CONTINUE ;
    (13) statement -> . BREAK ;
    (14) statement -> . assignment ;
    (17) assignment -> . lvalue DIVASSIGN expr
    (18) assignment -> . lvalue MULASSIGN expr
    (19) assignment -> . lvalue SUBASSIGN expr
    (20) assignment -> . lvalue ADDASSIGN expr
    (21) assignment -> . lvalue = expr
    (15) lvalue -> . _index
    (16) lvalue -> . ID
    (48) _index -> . ID [ idx_list ]
    }               shift and go to state 45
    ;               shift and go to state 4
    {               shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 7

    statement                      shift and go to state 17
    assignment                     shift and go to state 14
    lvalue                         shift and go to state 15
    _index                         shift and go to state 16

state 19

    (6) statement -> FOR ID . = range_expr statement
    =               shift and go to state 46


state 20

    (48) _index -> ID [ . idx_list ]
    (49) idx_list -> . idx_list , INTNUM
    (50) idx_list -> . INTNUM
    INTNUM          shift and go to state 48

    idx_list                       shift and go to state 47

state 21

    (7) statement -> WHILE ( . condition ) statement
    (22) condition -> . expr GE expr
    (23) condition -> . expr GT expr
    (24) condition -> . expr LE expr
    (25) condition -> . expr LT expr
    (26) condition -> . expr NE expr
    (27) condition -> . expr EQ expr
    (28) expr -> . STRING
    (29) expr -> . FLOATNUM
    (30) expr -> . INTNUM
    (31) expr -> . ( expr )
    (32) expr -> . [ rows ]
    (33) expr -> . ZEROS ( idx_list )
    (34) expr -> . EYE ( idx_list )
    (35) expr -> . ONES ( idx_list )
    (36) expr -> . expr '
    (37) expr -> . _index
    (38) expr -> . ID
    (39) expr -> . MINUS expr
    (40) expr -> . expr DOTDIV expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTADD expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) _index -> . ID [ idx_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    ZEROS           shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 34
    MINUS           shift and go to state 35

    condition                      shift and go to state 49
    expr                           shift and go to state 50
    _index                         shift and go to state 33

state 22

    (8) statement -> IF ( . condition ) statement ELSE statement
    (9) statement -> IF ( . condition ) statement
    (22) condition -> . expr GE expr
    (23) condition -> . expr GT expr
    (24) condition -> . expr LE expr
    (25) condition -> . expr LT expr
    (26) condition -> . expr NE expr
    (27) condition -> . expr EQ expr
    (28) expr -> . STRING
    (29) expr -> . FLOATNUM
    (30) expr -> . INTNUM
    (31) expr -> . ( expr )
    (32) expr -> . [ rows ]
    (33) expr -> . ZEROS ( idx_list )
    (34) expr -> . EYE ( idx_list )
    (35) expr -> . ONES ( idx_list )
    (36) expr -> . expr '
    (37) expr -> . _index
    (38) expr -> . ID
    (39) expr -> . MINUS expr
    (40) expr -> . expr DOTDIV expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTADD expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) _index -> . ID [ idx_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    ZEROS           shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 34
    MINUS           shift and go to state 35

    condition                      shift and go to state 51
    expr                           shift and go to state 50
    _index                         shift and go to state 33

state 23

    (10) statement -> PRINT elements . ;
    (53) elements -> elements . , expr
    ;               shift and go to state 52
    ,               shift and go to state 53


state 24

    (54) elements -> expr .
    (36) expr -> expr . '
    (40) expr -> expr . DOTDIV expr
    (41) expr -> expr . DOTMUL expr
    (42) expr -> expr . DIVIDE expr
    (43) expr -> expr . TIMES expr
    (44) expr -> expr . DOTSUB expr
    (45) expr -> expr . DOTADD expr
    (46) expr -> expr . MINUS expr
    (47) expr -> expr . PLUS expr
    ;               reduce using rule 54 (elements -> expr .)
    ,               reduce using rule 54 (elements -> expr .)
    ]               reduce using rule 54 (elements -> expr .)
    '               shift and go to state 54
    DOTDIV          shift and go to state 55
    DOTMUL          shift and go to state 56
    DIVIDE          shift and go to state 57
    TIMES           shift and go to state 58
    DOTSUB          shift and go to state 59
    DOTADD          shift and go to state 60
    MINUS           shift and go to state 61
    PLUS            shift and go to state 62


state 25

    (28) expr -> STRING .
    '               reduce using rule 28 (expr -> STRING .)
    DOTDIV          reduce using rule 28 (expr -> STRING .)
    DOTMUL          reduce using rule 28 (expr -> STRING .)
    DIVIDE          reduce using rule 28 (expr -> STRING .)
    TIMES           reduce using rule 28 (expr -> STRING .)
    DOTSUB          reduce using rule 28 (expr -> STRING .)
    DOTADD          reduce using rule 28 (expr -> STRING .)
    MINUS           reduce using rule 28 (expr -> STRING .)
    PLUS            reduce using rule 28 (expr -> STRING .)
    ;               reduce using rule 28 (expr -> STRING .)
    ,               reduce using rule 28 (expr -> STRING .)
    GE              reduce using rule 28 (expr -> STRING .)
    GT              reduce using rule 28 (expr -> STRING .)
    LE              reduce using rule 28 (expr -> STRING .)
    LT              reduce using rule 28 (expr -> STRING .)
    NE              reduce using rule 28 (expr -> STRING .)
    EQ              reduce using rule 28 (expr -> STRING .)
    )               reduce using rule 28 (expr -> STRING .)
    ]               reduce using rule 28 (expr -> STRING .)
    :               reduce using rule 28 (expr -> STRING .)
    {               reduce using rule 28 (expr -> STRING .)
    FOR             reduce using rule 28 (expr -> STRING .)
    WHILE           reduce using rule 28 (expr -> STRING .)
    IF              reduce using rule 28 (expr -> STRING .)
    PRINT           reduce using rule 28 (expr -> STRING .)
    RETURN          reduce using rule 28 (expr -> STRING .)
    CONTINUE        reduce using rule 28 (expr -> STRING .)
    BREAK           reduce using rule 28 (expr -> STRING .)
    ID              reduce using rule 28 (expr -> STRING .)


state 26

    (29) expr -> FLOATNUM .
    '               reduce using rule 29 (expr -> FLOATNUM .)
    DOTDIV          reduce using rule 29 (expr -> FLOATNUM .)
    DOTMUL          reduce using rule 29 (expr -> FLOATNUM .)
    DIVIDE          reduce using rule 29 (expr -> FLOATNUM .)
    TIMES           reduce using rule 29 (expr -> FLOATNUM .)
    DOTSUB          reduce using rule 29 (expr -> FLOATNUM .)
    DOTADD          reduce using rule 29 (expr -> FLOATNUM .)
    MINUS           reduce using rule 29 (expr -> FLOATNUM .)
    PLUS            reduce using rule 29 (expr -> FLOATNUM .)
    ;               reduce using rule 29 (expr -> FLOATNUM .)
    ,               reduce using rule 29 (expr -> FLOATNUM .)
    GE              reduce using rule 29 (expr -> FLOATNUM .)
    GT              reduce using rule 29 (expr -> FLOATNUM .)
    LE              reduce using rule 29 (expr -> FLOATNUM .)
    LT              reduce using rule 29 (expr -> FLOATNUM .)
    NE              reduce using rule 29 (expr -> FLOATNUM .)
    EQ              reduce using rule 29 (expr -> FLOATNUM .)
    )               reduce using rule 29 (expr -> FLOATNUM .)
    ]               reduce using rule 29 (expr -> FLOATNUM .)
    :               reduce using rule 29 (expr -> FLOATNUM .)
    {               reduce using rule 29 (expr -> FLOATNUM .)
    FOR             reduce using rule 29 (expr -> FLOATNUM .)
    WHILE           reduce using rule 29 (expr -> FLOATNUM .)
    IF              reduce using rule 29 (expr -> FLOATNUM .)
    PRINT           reduce using rule 29 (expr -> FLOATNUM .)
    RETURN          reduce using rule 29 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 29 (expr -> FLOATNUM .)
    BREAK           reduce using rule 29 (expr -> FLOATNUM .)
    ID              reduce using rule 29 (expr -> FLOATNUM .)


state 27

    (30) expr -> INTNUM .
    '               reduce using rule 30 (expr -> INTNUM .)
    DOTDIV          reduce using rule 30 (expr -> INTNUM .)
    DOTMUL          reduce using rule 30 (expr -> INTNUM .)
    DIVIDE          reduce using rule 30 (expr -> INTNUM .)
    TIMES           reduce using rule 30 (expr -> INTNUM .)
    DOTSUB          reduce using rule 30 (expr -> INTNUM .)
    DOTADD          reduce using rule 30 (expr -> INTNUM .)
    MINUS           reduce using rule 30 (expr -> INTNUM .)
    PLUS            reduce using rule 30 (expr -> INTNUM .)
    ;               reduce using rule 30 (expr -> INTNUM .)
    ,               reduce using rule 30 (expr -> INTNUM .)
    GE              reduce using rule 30 (expr -> INTNUM .)
    GT              reduce using rule 30 (expr -> INTNUM .)
    LE              reduce using rule 30 (expr -> INTNUM .)
    LT              reduce using rule 30 (expr -> INTNUM .)
    NE              reduce using rule 30 (expr -> INTNUM .)
    EQ              reduce using rule 30 (expr -> INTNUM .)
    )               reduce using rule 30 (expr -> INTNUM .)
    ]               reduce using rule 30 (expr -> INTNUM .)
    :               reduce using rule 30 (expr -> INTNUM .)
    {               reduce using rule 30 (expr -> INTNUM .)
    FOR             reduce using rule 30 (expr -> INTNUM .)
    WHILE           reduce using rule 30 (expr -> INTNUM .)
    IF              reduce using rule 30 (expr -> INTNUM .)
    PRINT           reduce using rule 30 (expr -> INTNUM .)
    RETURN          reduce using rule 30 (expr -> INTNUM .)
    CONTINUE        reduce using rule 30 (expr -> INTNUM .)
    BREAK           reduce using rule 30 (expr -> INTNUM .)
    ID              reduce using rule 30 (expr -> INTNUM .)


state 28

    (31) expr -> ( . expr )
    (28) expr -> . STRING
    (29) expr -> . FLOATNUM
    (30) expr -> . INTNUM
    (31) expr -> . ( expr )
    (32) expr -> . [ rows ]
    (33) expr -> . ZEROS ( idx_list )
    (34) expr -> . EYE ( idx_list )
    (35) expr -> . ONES ( idx_list )
    (36) expr -> . expr '
    (37) expr -> . _index
    (38) expr -> . ID
    (39) expr -> . MINUS expr
    (40) expr -> . expr DOTDIV expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTADD expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) _index -> . ID [ idx_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    ZEROS           shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 34
    MINUS           shift and go to state 35

    expr                           shift and go to state 63
    _index                         shift and go to state 33

state 29

    (32) expr -> [ . rows ]
    (51) rows -> . rows ; elements
    (52) rows -> . elements
    (53) elements -> . elements , expr
    (54) elements -> . expr
    (28) expr -> . STRING
    (29) expr -> . FLOATNUM
    (30) expr -> . INTNUM
    (31) expr -> . ( expr )
    (32) expr -> . [ rows ]
    (33) expr -> . ZEROS ( idx_list )
    (34) expr -> . EYE ( idx_list )
    (35) expr -> . ONES ( idx_list )
    (36) expr -> . expr '
    (37) expr -> . _index
    (38) expr -> . ID
    (39) expr -> . MINUS expr
    (40) expr -> . expr DOTDIV expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTADD expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) _index -> . ID [ idx_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    ZEROS           shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 34
    MINUS           shift and go to state 35

    rows                           shift and go to state 64
    elements                       shift and go to state 65
    expr                           shift and go to state 24
    _index                         shift and go to state 33

state 30

    (33) expr -> ZEROS . ( idx_list )
    (               shift and go to state 66


state 31

    (34) expr -> EYE . ( idx_list )
    (               shift and go to state 67


state 32

    (35) expr -> ONES . ( idx_list )
    (               shift and go to state 68


state 33

    (37) expr -> _index .
    '               reduce using rule 37 (expr -> _index .)
    DOTDIV          reduce using rule 37 (expr -> _index .)
    DOTMUL          reduce using rule 37 (expr -> _index .)
    DIVIDE          reduce using rule 37 (expr -> _index .)
    TIMES           reduce using rule 37 (expr -> _index .)
    DOTSUB          reduce using rule 37 (expr -> _index .)
    DOTADD          reduce using rule 37 (expr -> _index .)
    MINUS           reduce using rule 37 (expr -> _index .)
    PLUS            reduce using rule 37 (expr -> _index .)
    ;               reduce using rule 37 (expr -> _index .)
    ,               reduce using rule 37 (expr -> _index .)
    GE              reduce using rule 37 (expr -> _index .)
    GT              reduce using rule 37 (expr -> _index .)
    LE              reduce using rule 37 (expr -> _index .)
    LT              reduce using rule 37 (expr -> _index .)
    NE              reduce using rule 37 (expr -> _index .)
    EQ              reduce using rule 37 (expr -> _index .)
    )               reduce using rule 37 (expr -> _index .)
    ]               reduce using rule 37 (expr -> _index .)
    :               reduce using rule 37 (expr -> _index .)
    {               reduce using rule 37 (expr -> _index .)
    FOR             reduce using rule 37 (expr -> _index .)
    WHILE           reduce using rule 37 (expr -> _index .)
    IF              reduce using rule 37 (expr -> _index .)
    PRINT           reduce using rule 37 (expr -> _index .)
    RETURN          reduce using rule 37 (expr -> _index .)
    CONTINUE        reduce using rule 37 (expr -> _index .)
    BREAK           reduce using rule 37 (expr -> _index .)
    ID              reduce using rule 37 (expr -> _index .)


state 34
